--- a/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/EntityMapper.mustache
+++ b/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/EntityMapper.mustache
@@ -1,12 +1,12 @@
 using System;
 using System.Linq;
 using System.Diagnostics.CodeAnalysis;
-using EdFi.Ods.Api.Dependencies;
 using EdFi.Ods.Api.ETag;
 using EdFi.Ods.Api.Extensions;
 using EdFi.Ods.Common;
 using EdFi.Ods.Common.Constants;
 using EdFi.Ods.Common.Conventions;
+using EdFi.Ods.Common.Dependencies;
 using EdFi.Ods.Common.Extensions;
 using EdFi.Ods.Common.Models;
 {{#HasDerivedResources}}
