--- a/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/Resources.mustache
+++ b/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/Resources.mustache
@@ -7,9 +7,9 @@ using System.Net;
 using System.Diagnostics.CodeAnalysis;
 using EdFi.Ods.Common.Extensions;
 using EdFi.Ods.Common;
+using EdFi.Ods.Common.Dependencies;
 using EdFi.Ods.Common.Models;
 using EdFi.Ods.Common.Serialization;
-using EdFi.Ods.Api.Dependencies;
 using EdFi.Ods.Api.Models;
 using EdFi.Ods.Api.Validation;
 {{#SchemaNamespaces}}
