Reverted changes from previous commit.

--- a/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/Controllers.mustache
+++ b/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/Controllers.mustache
@@ -37,8 +37,7 @@ namespace {{ControllersNamespace}}
         {{PutRequest}},
         {{PostRequest}},
         {{DeleteRequest}},
-        {{GetByExampleRequest}},
-        {{SynchronizationContext}}>
+        {{GetByExampleRequest}}>
     {
         public {{ControllerClass}}(IPipelineFactory pipelineFactory, ISchoolYearContextProvider schoolYearContextProvider, IRESTErrorProvider restErrorProvider, IDefaultPageSizeLimitProvider defaultPageSizeLimitProvider)
             : base(pipelineFactory, schoolYearContextProvider, restErrorProvider, defaultPageSizeLimitProvider)
