--- a/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/EntityInterfaces.mustache
+++ b/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/EntityInterfaces.mustache
@@ -109,13 +109,12 @@ namespace {{EntitiesBaseNamespace}}
 
         bool ISynchronizationContext.IsMemberSupported(string memberName)
         {
-            switch case(memberName)
+            switch (memberName)
             {
     {{#SynchronizationContextMembers}}
         {{^ItemTypeName}}
                 case "{{PropertyName}}":
                     return Is{{PropertyName}}Supported;
-                    break;
         {{/ItemTypeName}}
     {{/SynchronizationContextMembers}}
                 default:
