Added columns to delete tracking tables for including the point-in-time "reference" data with UniqueIds and descriptors.

--- a/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/Changes_0050_CreateTrackedDeleteTables.mustache
+++ b/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/Changes_0050_CreateTrackedDeleteTables.mustache
@@ -2,7 +2,10 @@
 CREATE TABLE [changes].[{{Schema}}_{{TableName}}_TrackedDelete]
 (
     {{#PrimaryKeyColumns}}
-       {{ColumnName}} {{DataType}} NOT NULL,
+       Old{{ColumnName}} {{DataType}} NOT NULL,
+    {{/PrimaryKeyColumns}}
+    {{#PrimaryKeyColumns}}
+       New{{ColumnName}} {{DataType}} NULL,
     {{/PrimaryKeyColumns}}
        Id uniqueidentifier NOT NULL,
        ChangeVersion bigint NOT NULL,
