--- a/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/Changes_0040_CreateTriggerUpdateChangeVersionGenerator.mustache
+++ b/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/Changes_0040_CreateTriggerUpdateChangeVersionGenerator.mustache
@@ -1,4 +1,7 @@
 {{#NonDerivedAggregateRoots}}
+DROP TRIGGER IF EXISTS [{{Schema}}].[{{Schema}}_{{TableName}}_TR_UpdateChangeVersion]
+GO
+
 CREATE TRIGGER [{{Schema}}].[{{Schema}}_{{TableName}}_TR_UpdateChangeVersion] ON [{{Schema}}].[{{TableName}}] AFTER UPDATE AS
 BEGIN
     SET NOCOUNT ON;
@@ -6,6 +9,25 @@ BEGIN
     SET ChangeVersion = (NEXT VALUE FOR [changes].[ChangeVersionSequence])
     FROM [{{Schema}}].[{{TableName}}] u
     WHERE EXISTS (SELECT 1 FROM inserted i WHERE i.id = u.id);
+    {{#KeyIsUpdatable}}
+
+    INSERT INTO changes.{{Schema}}_{{TableName}}_TrackedChange({{#ChangeDataColumns}}Old{{ColumnName}}, {{/ChangeDataColumns}}{{#ChangeDataColumns}}New{{ColumnName}}, {{/ChangeDataColumns}}Id, {{#HasDiscriminator}}Discriminator{{/HasDiscriminator}}, ChangeVersion)
+    SELECT 
+        {{#ChangeDataColumns}}{{#SourceSelectExpression}}d{{SourceSelectExpression}}{{/SourceSelectExpression}}{{^SourceSelectExpression}}d.{{ColumnName}}{{/SourceSelectExpression}}, {{/ChangeDataColumns}}
+        {{#ChangeDataColumns}}{{#SourceSelectExpression}}i{{SourceSelectExpression}}{{/SourceSelectExpression}}{{^SourceSelectExpression}}i.{{ColumnName}}{{/SourceSelectExpression}}, {{/ChangeDataColumns}}
+        d.Id, {{#HasDiscriminator}}d.Discriminator, {{/HasDiscriminator}}(NEXT VALUE FOR [changes].[ChangeVersionSequence])
+    FROM	deleted d 
+        INNER JOIN inserted i
+            ON d.Id = i.Id
+        {{#Joins}}
+        {{#IsLeftJoin}}LEFT {{/IsLeftJoin}}{{^IsLeftJoin}}INNER {{/IsLeftJoin}}JOIN {{Schema}}.{{TableName}} d{{JoinAlias}}
+            ON d.{{ThisJoinColumnName}} = d{{JoinAlias}}.{{OtherJoinColumnName}}
+        {{/Joins}}
+        {{#Joins}}
+        {{#IsLeftJoin}}LEFT {{/IsLeftJoin}}{{^IsLeftJoin}}INNER {{/IsLeftJoin}}JOIN {{Schema}}.{{TableName}} i{{JoinAlias}}
+            ON d.{{ThisJoinColumnName}} = i{{JoinAlias}}.{{OtherJoinColumnName}}
+        {{/Joins}}
+    {{/KeyIsUpdatable}}
 END	
 GO
 
