--- a/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/Changes_0050_CreateTrackedDeleteTables.mustache
+++ b/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/Changes_0050_CreateTrackedDeleteTables.mustache
@@ -1,15 +1,20 @@
 {{#AllAggregateRootEntities}}
-CREATE TABLE [changes].[{{Schema}}_{{TableName}}_TrackedDelete]
+DROP TABLE IF EXISTS [changes].[{{Schema}}_{{TableName}}_TrackedDelete]
+DROP TABLE IF EXISTS [changes].[{{Schema}}_{{TableName}}_TrackedChange]
+
+CREATE TABLE [changes].[{{Schema}}_{{TableName}}_TrackedChange]
 (
-    {{#PrimaryKeyColumns}}
+    {{#ChangeDataColumns}}
        Old{{ColumnName}} {{DataType}} NOT NULL,
-    {{/PrimaryKeyColumns}}
-    {{#PrimaryKeyColumns}}
+    {{/ChangeDataColumns}}
+    {{#ChangeDataColumns}}
        New{{ColumnName}} {{DataType}} NULL,
-    {{/PrimaryKeyColumns}}
+    {{/ChangeDataColumns}}
        Id uniqueidentifier NOT NULL,
        ChangeVersion bigint NOT NULL,
+    {{#HasDiscriminator}}
        Discriminator nvarchar(128) NULL,
+    {{/HasDiscriminator}}
        CONSTRAINT PK_{{Schema}}_{{TableName}}_TrackedDelete PRIMARY KEY CLUSTERED (ChangeVersion)
 )
 
