--- a/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/Changes_0060_CreateDeletedForTrackingTriggers.mustache
+++ b/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/Changes_0060_CreateDeletedForTrackingTriggers.mustache
@@ -1,5 +1,8 @@
 {{#AggregateRoots}}
 {{#IsDerived}}
+DROP TRIGGER IF EXISTS [{{Schema}}].[{{Schema}}_{{TableName}}_TR_DeleteTracking]
+GO
+
 CREATE TRIGGER [{{Schema}}].[{{Schema}}_{{TableName}}_TR_DeleteTracking] ON [{{Schema}}].[{{TableName}}] AFTER DELETE AS
 BEGIN
     IF @@rowcount = 0 
@@ -7,10 +10,10 @@ BEGIN
 
     SET NOCOUNT ON
 
-    INSERT INTO [changes].[{{Schema}}_{{TableName}}_TrackedDelete]({{#PrimaryKeyColumns}}{{ColumnName}}, {{/PrimaryKeyColumns}}Id, ChangeVersion)
-    SELECT  {{#PrimaryKeyColumns}}d.{{ColumnName}}, {{/PrimaryKeyColumns}}Id, (NEXT VALUE FOR [changes].[ChangeVersionSequence])
+    INSERT INTO [changes].[{{Schema}}_{{TableName}}_TrackedChange]({{#ChangeDataColumns}}Old{{ColumnName}}, {{/ChangeDataColumns}}Id, ChangeVersion)
+    SELECT  {{#ChangeDataColumns}}d.{{ColumnName}}, {{/ChangeDataColumns}}Id, (NEXT VALUE FOR [changes].[ChangeVersionSequence])
     FROM    deleted d
-            INNER JOIN {{BaseTableSchema}}.{{BaseTableName}} b ON {{#PrimaryKeyColumns}}{{^IsFirst}} AND {{/IsFirst}}d.{{ColumnName}} = b.{{BaseColumnName}}{{/PrimaryKeyColumns}}
+            INNER JOIN {{BaseTableSchema}}.{{BaseTableName}} b ON {{#ChangeDataColumns}}{{^IsFirst}} AND {{/IsFirst}}d.{{ColumnName}} = b.{{BaseColumnName}}{{/ChangeDataColumns}}
 END
 GO
 
@@ -20,6 +23,9 @@ GO
 
 {{/IsDerived}}
 {{^IsDerived}}
+DROP TRIGGER IF EXISTS [{{Schema}}].[{{Schema}}_{{TableName}}_TR_DeleteTracking]
+GO
+
 CREATE TRIGGER [{{Schema}}].[{{Schema}}_{{TableName}}_TR_DeleteTracking] ON [{{Schema}}].[{{TableName}}] AFTER DELETE AS
 BEGIN
     IF @@rowcount = 0 
@@ -27,9 +33,13 @@ BEGIN
 
     SET NOCOUNT ON
 
-    INSERT INTO [changes].[{{Schema}}_{{TableName}}_TrackedDelete]({{#PrimaryKeyColumns}}{{ColumnName}}, {{/PrimaryKeyColumns}}Id, ChangeVersion)
-    SELECT  {{#PrimaryKeyColumns}}{{ColumnName}}, {{/PrimaryKeyColumns}}Id, (NEXT VALUE FOR [changes].[ChangeVersionSequence])
+    INSERT INTO [changes].[{{Schema}}_{{TableName}}_TrackedChange]({{#ChangeDataColumns}}Old{{ColumnName}}, {{/ChangeDataColumns}}Id, {{#HasDiscriminator}}Discriminator, {{/HasDiscriminator}}ChangeVersion)
+    SELECT  {{#ChangeDataColumns}}{{#SourceSelectExpression}}{{SourceSelectExpression}}{{/SourceSelectExpression}}{{^SourceSelectExpression}}d.{{ColumnName}}{{/SourceSelectExpression}}, {{/ChangeDataColumns}}d.Id, {{#HasDiscriminator}}d.Discriminator, {{/HasDiscriminator}}(NEXT VALUE FOR [changes].[ChangeVersionSequence])
     FROM    deleted d
+    {{#Joins}}
+        {{#IsLeftJoin}}LEFT {{/IsLeftJoin}}{{^IsLeftJoin}}INNER {{/IsLeftJoin}}JOIN {{Schema}}.{{TableName}} {{JoinAlias}}
+            ON d.{{ThisJoinColumnName}} = {{JoinAlias}}.{{OtherJoinColumnName}} 
+    {{/Joins}}
 END
 GO
 
