Code cleanup with preliminary (but disabled support for key changes).

--- a/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/Changes_0035_CreateTrackedChangeTables.mustache
+++ b/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/Changes_0035_CreateTrackedChangeTables.mustache
@@ -2,10 +2,10 @@
 CREATE TABLE [changes].[{{Schema}}_{{TableName}}_TrackedChange]
 (
     {{#ChangeDataColumns}}
-       Old{{ColumnName}} {{DataType}} NOT NULL,
+       Old{{ColumnName}} {{ColumnDataType}} NOT NULL,
     {{/ChangeDataColumns}}
     {{#ChangeDataColumns}}
-       New{{ColumnName}} {{DataType}} NULL,
+       New{{ColumnName}} {{ColumnDataType}} NULL,
     {{/ChangeDataColumns}}
        Id uniqueidentifier NOT NULL,
        ChangeVersion bigint NOT NULL,
